# tuxxle-dns

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  about.py  config.json  dns_records.db  dns_records.db-journal  help.py  install_deps.bat  install_deps.py  launcher.py  main.py  requirements-312.txt  requirements.txt  rthook_pyqt6.py  run.bat  run_app.bat  setup.py  sponsor.py
.github/: CODEOWNERS  FUNDING.yml
assets/: version_info.txt
assets/images/: logo_text.psd
config/: .master_password  .secure_key  green_dns.db  secure_config.enc  security_audit.db
core/: __init__.py  config.py  database.py  dns_records.py  dns_server.py  dnssec.py  forwarding.py  green_dns.py  ip_converter.py  secure_config.py  security.py  server_diagnostics.py  version.py  wildcard.py
docs/: API.md  BUILD.md  BUILDING.md  INSTALLATION.md  ROADMAP.md  RUNNING.md  SECURITY.md  STRUCTURE.md  STYLE.md  TESTING.md  TRANSLATION.md  UPDATING.md  USER_GUIDE.md  VERSIONING.md
lang/: __init__.py  language_manager.py  translations.py
setup/: MANIFEST.in  pyproject.toml  setup.py
setup/Nuitka/: build_nuitka.py
setup/PyInstaller/: build_pyinstaller.py
setup/hooks/: hook-cryptography.py
tests/: __init__.py  check_metadata.py  test_config.py  test_dns_server.py  test_executable.py  test_records.py  test_ui.py
ui/: __init__.py  about.py  config_widget.py  database_tools_dialog.py  database_widget.py  diagnostics_dialog.py  green_dns_dialog.py  help.py  ip_converter_dialog.py  logs_widget.py  main_window.py  menu.py  preferences_dialog.py  records_widget.py  security_dialog.py  sponsor.py  stats_widget.py  themes.py  updates.py
