[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dns-server-manager"
dynamic = ["version"]
description = "Enterprise DNS Server Manager with Green DNS, Security, and Advanced Features"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Nsfr750", email = "nsfr750@yandex.com"}
]
maintainers = [
    {name = "Nsfr750", email = "nsfr750@yandex.com"}
]
keywords = [
    "dns",
    "server",
    "management",
    "gui",
    "pyside6",
    "windows",
    "internationalization",
    "testing",
    "green-dns",
    "sustainability",
    "energy-monitoring",
    "carbon-footprint",
    "dnssec",
    "security",
    "wildcard-records",
    "conditional-forwarding",
    "enterprise"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: System :: Networking",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Environment :: X11 Applications :: Qt",
    "Natural Language :: English",
    "Natural Language :: Spanish",
    "Natural Language :: French",
    "Natural Language :: German",
    "Natural Language :: Italian",
]
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.10.0",
    "PySide6-Addons>=6.10.0",
    "PySide6-Essentials>=6.10.0",
    "wand>=0.6.13",
    "qrcode>=8.2",
    "psutil>=5.9.0",
    "cryptography>=41.0.7",
    "dnspython>=2.6.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]
build = [
    "pyinstaller>=6.12.0",
    "nuitka>=2.4.7",
]
dev = [
    "black>=23.0.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
    "pre-commit>=3.0.0",
]
security = [
    "cryptography>=41.0.7",
    "bcrypt>=4.0.0",
]
monitoring = [
    "psutil>=5.9.0",
    "prometheus-client>=0.16.0",
]

[project.urls]
Homepage = "https://www.tuxxle.org"
Documentation = "https://github.com/Nsfr750/tuxxle-dns/tree/main/docs"
Repository = "https://github.com/Nsfr750/tuxxle-dns"
"Bug Tracker" = "https://github.com/Nsfr750/tuxxle-dns/issues"
Changelog = "https://github.com/Nsfr750/tuxxle-dns/blob/main/CHANGELOG.md"
License = "https://github.com/Nsfr750/tuxxle-dns/blob/main/LICENSE"

[project.scripts]
dns-server-manager = "main:main"
dns-server-gui = "main:main"

[tool.setuptools.dynamic]
version = {attr = "core.version.__version__"}

[tool.setuptools.package-data]
"*" = [
    "*.png",
    "*.jpg", 
    "*.ico", 
    "*.json", 
    "*.md", 
    "*.txt", 
    "*.rst"
]
"assets" = [
    "icons/*",
    "images/*"
]
"lang" = [
    "*.py"
]
"docs" = [
    "*.md"
]

[tool.setuptools.packages.find]
exclude = [
    "tests*",
    "venv*",
    "build*",
    "dist*"
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]

[tool.coverage.run]
source = ["core", "ui", "lang"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
    "venv/*",
    "build/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]
